fix search paper alignment

--- a/static/cartoview_feature_list/src/css/view.css
+++ b/static/cartoview_feature_list/src/css/view.css
@@ -85,7 +85,9 @@
 
 .search-paper {
     padding: 5px;
-    display: flex
+    display: flex;
+    flex: 1;
+    align-items: center;
 }
 
 .nav-toolbar {
